--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </div>
             </nav>
 
-            <div class="my-44 md:mx-16 mx-2 md:mr-auto border-2 w-fit">
+            <div class="mt-64 mb-44 md:mx-16 mx-2 md:mr-auto border-2 w-fit">
               <p
                 class="text-4xl md:text-6xl uppercase font-light text-white font-Josefin-Sans p-5 md:p-10 max-w-lg border-white"
               >
